<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.igormaznitsa</groupId>
    <artifactId>jcp-tests</artifactId>
    <version>0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <jcp.test.version>7.2.2-SNAPSHOT</jcp.test.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.13.3</junit.version>
        <maven.compiler.release>11</maven.compiler.release>
        <gradle5.executable>gradle5</gradle5.executable>
        <gradle6.executable>gradle6</gradle6.executable>
        <gradle7.executable>gradle7</gradle7.executable>
        <gradle8.executable>gradle8</gradle8.executable>
        <gradle9.executable>gradle9</gradle9.executable>
    </properties>

    <modules>
        <module>jcp-test-ant</module>
        <module>jcp-test-maven</module>
        <module>jcp-test-maven-action</module>
        <module>jcp-test-static-site</module>
        <module>jcp-test-javassist</module>
        <module>jcp-test-gradle-6</module>
        <module>jcp-test-gradle-7</module>
        <module>jcp-test-gradle-8</module>
        <module>jcp-test-gradle-9</module>
        <module>jcp-test-android</module>
    </modules>

    <profiles>
        <profile>
            <id>java-9</id>
            <activation>
                <jdk>[9</jdk>
            </activation>
            <properties>
                <argLine>
                    --add-opens java.base/java.lang=ALL-UNNAMED
                    --add-opens java.base/java.io=ALL-UNNAMED
                    --add-opens java.base/java.util=ALL-UNNAMED
                    --add-opens java.base/java.util.stream=ALL-UNNAMED
                    --add-opens java.base/java.net=ALL-UNNAMED
                    --add-opens java.base/java.nio.charset=ALL-UNNAMED
                    --add-opens java.base/sun.nio.cs=ALL-UNNAMED
                </argLine>
            </properties>
        </profile>
        <profile>
            <id>new-jdk</id>
            <activation>
                <jdk>(1.8,]</jdk>
            </activation>
            <modules>
                <module>jcp-test-jep238</module>
            </modules>
        </profile>
    </profiles>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.13.2</version>
            </dependency>
            <dependency>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.5.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>com.igormaznitsa</groupId>
            <artifactId>jcp</artifactId>
            <version>${jcp.test.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>

    <build>
      <plugins>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-clean-plugin</artifactId>
              <executions>
                  <execution>
                      <id>force-clean</id>
                      <goals>
                          <goal>clean</goal>
                      </goals>
                      <phase>initialize</phase>
                  </execution>
              </executions>
          </plugin>
      </plugins>
    </build>

</project>
